<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:text="@string/add"
        android:background="@color/primary_dark"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/rounded"
        android:id="@+id/edtName"
        android:paddingStart="@dimen/_12sdp"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/rounded"
        android:id="@+id/edtEmail"
        android:paddingStart="@dimen/_12sdp"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/rounded"
        android:id="@+id/edtCourse"
        android:paddingStart="@dimen/_12sdp"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/course" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/rounded"
        android:id="@+id/edtUrl"
        android:paddingStart="@dimen/_12sdp"
        android:layout_margin="@dimen/_5sdp"
        android:hint="@string/image_url" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/add_"
        android:id="@+id/btnadd" />

</LinearLayout>