<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp"
    tools:context=".AddAnnouncement">

    <EditText
        android:id="@+id/text_ann"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:textSize="@dimen/_12sdp"
        android:hint="@string/add_announcement" />

    <EditText
        android:id="@+id/text_imgUrl"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:hint="@string/image_url" />


    <Button
        android:id="@+id/btn_addAnn"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:text="@string/submit" />


</LinearLayout>