<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:elevation="8dp"
    android:backgroundTint="@color/primary"
    app:cardUseCompatPadding="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img1"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            app:civ_border_color="@color/white"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_toEndOf="@id/img1"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/coursetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nametext"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_toEndOf="@id/img1"
            android:text="@string/course"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coursetext"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toEndOf="@id/img1"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailtext"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:text="@string/edit" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_80sdp"
                android:text="@string/delete" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>